# nexusnote

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py  tests_pre_start.py
app/api/: deps.py  (+1 more)
backend/: .gitignore  gunicorn_conf.py  playground.ipynb  pyproject.toml
backend/app/: __version__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: annotation.py  concept.py  document.py
backend/app/core/: config.py  db.py  embeddings.py  vector_store.py
backend/app/crud/: base.py  crud_block.py  crud_concept.py  crud_document.py  crud_link.py
backend/app/models/: annotation.py  block.py  concept.py  document.py  link.py
backend/app/rag/: visualize.py
backend/app/rag/embeddings/: jina_clip.py  registry.py
backend/app/rag/pdf_processors/: marker.py
backend/app/schemas/: annotation.py  concept.py  document.py  page.py  rag.py  section.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_annotation.py  test_concept.py  test_document.py
backend/app/tests/api/crud/: test_crud_annotation.py  test_crud_concept.py  test_crud_document.py  test_crud_link.py
backend/scripts/: prestart.sh
backend/tutorials/: _gmft_extract_tables.py  _langchain_vector_store_add_doc.py  _langchain_vector_store_retrieve.py  _pymupdf_extract_images_with_caption.py
frontend/: .prettierignore  index.html  package.json  tailwind.config.js  tsconfig.json
scripts/: test.sh
src/: chunk_processor.py  model.py  utils.py
tools/: extract_contents.py  marker_pipeline_demo.py  rag_pipeline_demo.py
tutorials/: _huggingface_jina-clip-v2.py  _langchain_vector_store_add_doc.py  _langchain_vector_store_retrieve.py  _layoutparser.py  _llamaindex_multimodal.py  _marker.py  _markitdown.py  _neo4j.py  _openparse.py  _paddlex.py  _pdfminer_toc_target_page.py  (+1 more)
(+106 files in other folders)
